<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="100"
    android:background="@drawable/background"
    tools:context="com.bicubic.botadnews.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="65"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="25dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:paddingLeft="15dp" />

            <EditText
                android:id="@+id/et_city"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/city"
                android:inputType="textPostalAddress"
                android:paddingLeft="15dp" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/contiue"
            android:onClick="clickCountinue"
            android:text="@string/continue_str"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="35"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/FrameLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            android:layout_weight="1">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/fb_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/bt_facebook"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/facebook"
                android:text="@string/facebook"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </FrameLayout>

        <RelativeLayout
            android:id="@+id/rel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/FrameLayout1"
            android:layout_marginBottom="20dp"
            android:visibility="gone"
            android:background="@drawable/login_with_facebook">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:gravity="center|center_vertical"
                android:text="@string/login_with_facebook"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>
